--- a/testforkcontroller.csproj
+++ b/testforkcontroller.csproj
@@ -85,6 +85,8 @@
     <Compile Include="Assets\Test3_TwoTinesForkController\Scripts\TineController.cs" />
     <Compile Include="Assets\Test3_TwoTinesForkController\Scripts\TouchZoneDescriptor.cs" />
     <Compile Include="Assets\Test3_TwoTinesForkController\Scripts\TwoTinesForkController.cs" />
+    <Compile Include="Assets\Test4_Rigidbody\Scripts\ForkLiftFake.cs" />
+    <Compile Include="Assets\Test4_Rigidbody\Scripts\test.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
